@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-08-31T08:14:30Z",
+  "timestamp" : "2023-09-01T08:14:32Z",
   "count_outdated" : 171,
   "uniques_outdated" : 145,
-  "count" : 177,
-  "uniques" : 151,
+  "count" : 180,
+  "uniques" : 153,
   "clones" : [
     {
       "timestamp": "2023-08-20T00:00:00Z",
@@ -58,6 +58,15 @@
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-09-01T00:00:00Z",
+      "count": 3,
+      "count_minmax": [ 3, 3 ],
+      "count_decinc": [ 0, 3 ],
+      "uniques": 2,
+      "uniques_minmax": [ 2, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
