@@ -1,3 +1,12 @@
+2023-09-01T08:14:32Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6047073197 # 1136
+* notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-09-01
+* notice: last 14d: unq all: 2 9
+* notice: prev accum: outdated-unq outdated-all / unq all: 145 171 / 151 177
+* notice: next accum: outdated-unq outdated-all / unq all: 145 171 / 153 180
+* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -0 -0 / +2 +3 -0 -0 / 2 3
+* notice: removed / changed dates: [] / [2023-09-01]
+
 2023-08-31T08:14:30Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6034772555 # 1133
 * notice: Stats Output Repository: https://github.com/andry81-stats/github-action-extensions--gh-stats/commits?branch=master&time_zone=utc&until=2023-08-31
